--- a/main.css
+++ b/main.css
@@ -1,3 +1,28 @@
 body {
-    font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
+}
+
+.button {
+  background-color: #32a4a8;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+h1 {
+  text-align: center;
+}
+
+p.image {
+  text-align: left;
+}
+
+p.main {
+  text-align: justify;
 }
