--- a/main.css
+++ b/main.css
@@ -26,3 +26,13 @@ p.image {
 p.main {
   text-align: justify;
 }
+
+.vexifyimg {
+  padding-left: 65%;
+  margin-top: -22%;;
+}
+
+.abouttxt {
+  font-size: 30px;
+}
+
