--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ body {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+  border-radius: 2px;
 }
 
 h1 {
@@ -34,4 +35,8 @@ p.main {
 
 .abouttxt {
   font-size: 30px;
+}
+
+.aboutline {
+  size: 4px;
 }
